force-app/main/default/objects/sirenum__Shift__c/fields/Actual_Charge__c.field-meta.xml
<CustomField>
    <fullName>Actual_Charge__c</fullName>
    <label>Actual Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>