force-app/main/default/objects/sirenum__Shift__c/fields/Actual_Pay__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pay__c</fullName>
    <label>Actual Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>