force-app/main/default/objects/sirenum__Shift__c/fields/AWR__c.field-meta.xml
<CustomField>
    <fullName>AWR__c</fullName>
    <formula>sirenum__Contract__r.sirenum__AWR_Eligable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWR</label>
    <type>Checkbox</type>
</CustomField>