force-app/main/default/objects/sirenum__Shift__c/fields/City_App__c.field-meta.xml
<CustomField>
    <fullName>City_App__c</fullName>
    <formula>sirenum__Site__r.sirenum__City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>