force-app/main/default/objects/sirenum__Shift__c/fields/Client1__c.field-meta.xml
<CustomField>
    <fullName>Client1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>