force-app/main/default/objects/sirenum__Shift__c/fields/Client_Shift_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Client_Shift_Feedback__c</fullName>
    <label>Client Shift Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>