force-app/main/default/objects/sirenum__Shift__c/fields/Delivery_Setting_App__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Setting_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Delivery Setting</label>
    <type>TextArea</type>
</CustomField>