force-app/main/default/objects/sirenum__Shift__c/fields/Evertime_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Evertime_External_ID__c</fullName>
    <formula>&quot;SHIFT-&quot; &amp; BLANKVALUE(Legacy_Evertime_External_ID__c, Auto_Evertime_External_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evertime External ID</label>
    <type>Text</type>
</CustomField>