force-app/main/default/objects/sirenum__Shift__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Paid or Billed</fullName>
                <default>true</default>
                <label>Not Paid or Billed</label>
            </value>
            <value>
                <fullName>Approved for Pay &amp; Bill</fullName>
            </value>
            <value>
                <fullName>Billed but Not Paid</fullName>
            </value>
            <value>
                <fullName>Paid but Not Billed</fullName>
            </value>
            <value>
                <fullName>Paid &amp; Billed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>