force-app/main/default/objects/sirenum__Shift__c/fields/Is_Term_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Term_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Term Time</label>
    <type>Checkbox</type>
</CustomField>