force-app/main/default/objects/sirenum__Shift__c/fields/Job_Role_App__c.field-meta.xml
<CustomField>
    <fullName>Job_Role_App__c</fullName>
    <formula>sirenum__Team__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Role</label>
    <type>Text</type>
</CustomField>