force-app/main/default/objects/sirenum__Shift__c/fields/Job_Title_App__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_App__c</fullName>
    <formula>s5m__BH4SFJob__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Title</label>
    <type>Text</type>
</CustomField>