force-app/main/default/objects/sirenum__Shift__c/fields/Job_Type_App__c.field-meta.xml
<CustomField>
    <fullName>Job_Type_App__c</fullName>
    <formula>sirenum__Team__r.sirenum__Job_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>