force-app/main/default/objects/sirenum__Shift__c/fields/Legacy_Evertime_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Evertime_External_ID__c</fullName>
    <label>Legacy Evertime External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>