force-app/main/default/objects/sirenum__Shift__c/fields/Location_of_Delivery_App__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Delivery_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Location of Delivery</label>
    <length>20</length>
    <type>Text</type>
</CustomField>