force-app/main/default/objects/sirenum__Shift__c/fields/Longitude_App__c.field-meta.xml
<CustomField>
    <fullName>Longitude_App__c</fullName>
    <formula>sirenum__Site__r.sirenum__Coordinates__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>