force-app/main/default/objects/sirenum__Shift__c/fields/More_than_7_days_Missmatch__c.field-meta.xml
<CustomField>
    <fullName>More_than_7_days_Missmatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More than 7 days Missmatch</label>
    <type>Checkbox</type>
</CustomField>