force-app/main/default/objects/sirenum__Shift__c/fields/Needs_of_the_learners_App__c.field-meta.xml
<CustomField>
    <fullName>Needs_of_the_learners_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Needs of the learners</label>
    <type>TextArea</type>
</CustomField>