force-app/main/default/objects/sirenum__Shift__c/fields/Not_matching_Client_s_Worker_Type__c.field-meta.xml
<CustomField>
    <fullName>Not_matching_Client_s_Worker_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not matching Client&apos;s Worker Type</label>
    <type>Checkbox</type>
</CustomField>