force-app/main/default/objects/sirenum__Shift__c/fields/Payrolled__c.field-meta.xml
<CustomField>
    <fullName>Payrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payrolled</label>
    <type>Checkbox</type>
</CustomField>