force-app/main/default/objects/sirenum__Shift__c/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Approval</label>
    <referenceTo>Pre_Approval__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>