force-app/main/default/objects/sirenum__Shift__c/fields/Programme_App__c.field-meta.xml
<CustomField>
    <fullName>Programme_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Programme</label>
    <type>TextArea</type>
</CustomField>