force-app/main/default/objects/sirenum__Shift__c/fields/Sensitive_Data__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensitive Data</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>