force-app/main/default/objects/sirenum__Shift__c/fields/Sensitive_Data_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data_Last_Name__c</fullName>
    <formula>sirenum__Site__r.Sensitive_Data_Record__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>