force-app/main/default/objects/sirenum__Shift__c/fields/Short_Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Short_Long_Term__c</fullName>
    <label>Short / Long Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Term</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>