force-app/main/default/objects/sirenum__Shift__c/fields/Site_App__c.field-meta.xml
<CustomField>
    <fullName>Site_App__c</fullName>
    <formula>sirenum__Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>