force-app/main/default/objects/sirenum__Shift__c/fields/SK_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SK_Feedback__c</fullName>
    <description>This indicates how the user felt over-all about their shift. This is intended to be set right after the worker finishes the shift.</description>
    <inlineHelpText>This indicates how the user felt over-all about their shift.</inlineHelpText>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Great</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>