force-app/main/default/objects/sirenum__Shift__c/fields/Street_Address_App__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_App__c</fullName>
    <formula>sirenum__Site__r.sirenum__Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>