force-app/main/default/objects/sirenum__Shift__c/fields/Subject_App__c.field-meta.xml
<CustomField>
    <fullName>Subject_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>