force-app/main/default/objects/sirenum__Shift__c/fields/Support_Type_App__c.field-meta.xml
<CustomField>
    <fullName>Support_Type_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Support Type</label>
    <type>TextArea</type>
</CustomField>