force-app/main/default/objects/sirenum__Shift__c/fields/Tutexa_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>Tutexa_Export_Date__c</fullName>
    <label>Tutexa Export Date</label>
    <type>Date</type>
</CustomField>