force-app/main/default/objects/sirenum__Shift__c/fields/Type_of_Care_App__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Care_App__c</fullName>
    <label>Type of Support/Care</label>
    <type>TextArea</type>
</CustomField>