force-app/main/default/objects/sirenum__Shift__c/fields/Who_Is_The_Support_For_App__c.field-meta.xml
<CustomField>
    <fullName>Who_Is_The_Support_For_App__c</fullName>
    <description>Used to display in the app.</description>
    <label>Who Is The Support For?</label>
    <type>TextArea</type>
</CustomField>