force-app/main/default/objects/sirenum__Shift__c/validationRules/Block_move_to_Hubspot_Candidate.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_move_to_Hubspot_Candidate</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(sirenum__Contact__r.TR1__Candidate_Status__c , &quot;HubSpot Candidate&quot;)</errorConditionFormula>
    <errorMessage>You cannot assign Candidates that have the ‘Hubspot Candidate’ status to Shifts</errorMessage>
</ValidationRule>