force-app/main/default/objects/sirenum__Shift__c/validationRules/Prevent_Payrolled_Shift_edit.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Payrolled_Shift_edit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Invoice_Status__c, &quot;Approved for Pay &amp; Bill&quot;),
        ISPICKVAL(Invoice_Status__c, &quot;Billed but Not Paid&quot;),
        ISPICKVAL(Invoice_Status__c, &quot;Paid but Not Billed&quot;),
        ISPICKVAL(Invoice_Status__c, &quot;Paid &amp; Billed&quot;)
    ),
    NOT($Permission.Modify_Payrolled_Shifts)
)</errorConditionFormula>
    <errorMessage>You cannot modify payrolled Shifts</errorMessage>
</ValidationRule>